--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,9 @@
 name: PHP Composer
+env:
+  DB_HOST: localhost
+  DB_DATABASE: coa
+  DB_USER: root
+  DB_PASSWORD: root
 
 on:
   push:
@@ -18,6 +23,18 @@ jobs:
         os: [ ubuntu-latest, windows-latest ]
 
     steps:
+      - name: Install MariaDB
+        uses: ankane/setup-mariadb@v1
+        with:
+          database: ${{ env.DB_DATABASE }}
+
+      - name: Load database
+        run: mysql ${{ env.DB_DATABASE }} < coa.sql.gz
+        working-directory: tests/test_data
+
+      - name: Set MariaDB password
+        run: mysql -u root -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';"
+
       - uses: actions/checkout@v3
 
       - name: Validate composer.json and composer.lock
@@ -37,7 +54,7 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
           coverage: xdebug
-          extensions: libxml, json, dom, curl
+          extensions: pdo_mysql
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
