--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '8.1', '8.2' ]
-        os: [ ubuntu-latest, windows-latest ]
+        php: [ '8.2' ]
+        os: [ ubuntu-latest ]
 
     steps:
       - name: Install MariaDB
